[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/levels/DestructibleBlock.gd" type="Script" id=1]
[ext_resource path="res://scenes/levels/PhysicsBlock.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/explosions/destructible_object.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/explosions/explode_object.gd" type="Script" id=4]
[ext_resource path="res://scenes/explosions/explosion_particles.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/explosions/fake_explosion_particles.tscn" type="PackedScene" id=6]

[node name="DestructibleBlock" type="Node2D"]
script = ExtResource( 1 )

[node name="PhysicsBlock" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, 0 )

[node name="fake_explosion_particles" type="Node2D" parent="."]

[node name="destructible_object_node" type="Node2D" parent="."]
visible = false

[node name="destructible_object" parent="destructible_object_node" instance=ExtResource( 3 )]
script = ExtResource( 4 )
blocks_per_side = 4
debris_max_time = 15.0
remove_debris = true

[node name="particles" parent="destructible_object_node" instance=ExtResource( 5 )]

[node name="fake_explosion_particles" parent="destructible_object_node" instance=ExtResource( 6 )]
[connection signal="block_destroyed" from="PhysicsBlock" to="." method="_on_PhysicsBlock_block_destroyed"]
